--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="red">#F32424</color>
+    <color name="text">#FFFFFF</color>
+    <color name="blue">#5ECAF7</color>
+    <color name="green">#21FD09</color>
+
 </resources>
