--- a/app/src/main/res/layout/activity_praktikum.xml
+++ b/app/src/main/res/layout/activity_praktikum.xml
@@ -68,7 +68,8 @@
         android:layout_marginTop="12dp"
         android:src="@drawable/dips"
         app:layout_constraintStart_toEndOf="@+id/imageView14"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        android:onClick="handleClickLoadDipsFragment"/>
 
     <ImageView
         android:id="@+id/imageView16"
@@ -78,7 +79,8 @@
         android:layout_marginTop="12dp"
         android:src="@drawable/handstand"
         app:layout_constraintStart_toEndOf="@+id/imageView15"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        android:onClick="handleClickLoadHandstandFragment"/>
 
 
 
